2011-03-08  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Anders Carlsson.

        Crash in CFNetwork visiting google.com
        https://bugs.webkit.org/show_bug.cgi?id=55958

        * Shared/API/c/cf/WKURLResponseCF.cpp:
        (WKURLResponseCopyCFURLResponse):
        If the response to copy is null, return 0;

2011-03-08  John Sullivan  <sullivan@apple.com>

        Reverted the patch for https://bugs.webkit.org/show_bug.cgi?id=55940
        
        The patch was insufficient, and it wasn't useful for the intended client use either.

        * WebProcess/InjectedBundle/API/c/WKBundlePage.h:
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction):

2011-03-08  Alejandro G. Castro  <alex@igalia.com>

        Unreviewed, fixed GTK+ compilation after r80569.

        * UIProcess/gtk/WebView.cpp:
        (WebKit::WebView::windowToScreen):
        * UIProcess/gtk/WebView.h:

2011-03-08  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Sam Weinig.

        WK2: Cannot set focus on an element when focus is outside of WKView
        https://bugs.webkit.org/show_bug.cgi?id=55281

        * UIProcess/API/mac/PageClientImpl.h:
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::setFocus):
        * UIProcess/API/qt/qwkpage_p.h:
        (QWKPagePrivate::setFocus):
        * UIProcess/PageClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::setFocus):
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in:
        * UIProcess/win/WebView.h:
        (WebKit::WebView::setFocus):
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::focus):
        (WebKit::WebChromeClient::unfocus):

2011-03-08  Jeff Miller  <jeffm@apple.com>

        Unreviewed, fix last change so WKBaseWin.h is in alphabetical order in the project XML.
